--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "npm run build && aws s3 sync build/ s3://ta-haus --acl public-read",
-    "sync": "aws s3 sync build/ s3://ta-haus --acl public-read",
+    "deploy": "npm run build && aws s3 sync build/ s3://xledg.com --acl public-read",
+    "sync": "aws s3 sync build/ s3://xledg.com --acl public-read",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
